--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
+body {
+	background-color: white;
+}
+
+#input-container {
+	width: 70%;
+	margin-left: 10em
+}
+
 #giph-container {
 
 	margin: 1em;
 	float: left;
 }
 
-#toon-buttons, #toon-form, {
-margin: 1em;
+#toon-buttons, #toon-form, #toon, button {
+margin: 0.5em;
 }
+
+form {
+	float: right;
+}
+
+
